Unified texture coordinates throughout the engine.
Removed the TextureMatrix
The texture now has a "FlipY" property for whether it was uploaded flipped.
Added tests for that.
Fixed disabling texture tiling breaking UVs in some cases.
Texture coordinates now follow the vertices positions.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -151,6 +151,9 @@
     <None Update="Assets\CachedResults\TestFullScaleInteger.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\CachedResults\TestUVMapping.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\CachedResults\TilemapRender.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -179,6 +182,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Images\256colorbmp.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Images\logoAsymmetric.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\Images\logoAlpha.png">
