Framebuffer resizing test added

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -112,6 +112,9 @@
     <None Update="Assets\CachedResults\EmotionTTAtlas.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\CachedResults\FramebufferResizing.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\CachedResults\PngDecode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
