--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -115,6 +115,9 @@
     <None Update="Assets\CachedResults\FramebufferResizing.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\CachedResults\LineDrawing.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\CachedResults\PngDecode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
