Testing Nuget Integration

--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -9,6 +9,11 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
+    <PackageId>Emotion</PackageId>
+    <Authors>Vlad Abadzhiev</Authors>
+    <PackageDescription>Game engine. Check repository for more information.</PackageDescription>
+    <RepositoryUrl>https://github.com/Cryru/Emotion</RepositoryUrl>
+    <Version>0.0.0</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
