--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/Cryru/Emotion</RepositoryUrl>
     <projectUrl>https://github.com/Cryru/Emotion</projectUrl>
     <iconUrl>https://github.com/Cryru/Emotion/blob/master/EmotionLogo.png?raw=true</iconUrl>
+    <tags>game-engine game engine emotion opengl cross-platform game-development linux macos adfectus</tags>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
