--- a/Emotion/Emotion.nuspec
+++ b/Emotion/Emotion.nuspec
@@ -20,6 +20,8 @@
       <group targetFramework=".NETStandard2.1">
         <dependency id="Serilog" version="2.8.0" exclude="Build,Analyzers" />
         <dependency id="Serilog.Sinks.File" version="4.0.0" exclude="Build,Analyzers" />
+        <dependency id="Serilog.Sinks.Async" version="1.4.0" exclude="Build,Analyzers" />
+        <dependency id="Serilog.Sinks.ColoredConsole" version="3.0.1" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
