--- a/.github/workflows/buildWindows.yml
+++ b/.github/workflows/buildWindows.yml
@@ -18,7 +18,6 @@ jobs:
         7z x mesa.7z
         mkdir .\Tests\bin\Debug\netcoreapp3.0\mesa
         mv .\x64\opengl32.dll .\Tests\bin\Debug\netcoreapp3.0\mesa\opengl32.dll
-        ls .\Tests\bin\Debug\netcoreapp3.0
     - name: Run Tests
       run: |
         cd .\Tests\bin\Debug\netcoreapp3.0
@@ -34,10 +33,7 @@ jobs:
       if: github.ref == 'refs/heads/master'
       env:
         NUGET_KEY: ${{ secrets.NUGET_KEY }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         dotnet tool install -g dotnet-script
         dotnet script PublishNuget.cs
-
-        
-        
-        
