--- a/Nuget.config
+++ b/Nuget.config
@@ -1,3 +1,3 @@
-<packageRestore>
+<packageSources>
   <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
-</packageRestore >
+</packageSources>
