--- a/Emotion/Emotion.nuspec
+++ b/Emotion/Emotion.nuspec
@@ -22,7 +22,7 @@
     <language>en-US</language>
     <tags>game-engine game engine emotion opengl gles cross-platform game-development linux macos adfectus</tags>
     <dependencies>
-      <group targetFramework=".NETStandard2.1">
+      <group targetFramework="netcoreapp3.0">
         <dependency id="Serilog" version="2.8.0" exclude="Build,Analyzers" />
         <dependency id="Serilog.Sinks.File" version="4.0.0" exclude="Build,Analyzers" />
         <dependency id="Serilog.Sinks.Async" version="1.4.0" exclude="Build,Analyzers" />
@@ -31,9 +31,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Debug\netstandard2.1\Emotion.dll" target="lib\netstandard2.1\Emotion.dll" />
-    <file src="bin\Debug\netstandard2.1\Emotion.pdb" target="lib\netstandard2.1\Emotion.pdb" />
-    <file src="bin\Debug\netstandard2.1\Emotion.xml" target="lib\netstandard2.1\Emotion.xml" />
+    <file src="bin\Debug\netcoreapp3.0\Emotion.dll" target="lib\netcoreapp3.0\Emotion.dll" />
+    <file src="bin\Debug\netcoreapp3.0\Emotion.pdb" target="lib\netcoreapp3.0\Emotion.pdb" />
+    <file src="bin\Debug\netcoreapp3.0\Emotion.xml" target="lib\netcoreapp3.0\Emotion.xml" />
     <file src="..\EmotionLogo.png" target="images\" />
   </files>
 </package>
