[Examples] Added example 3d viewer for sprite stack models

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Emotion.Plugins.ImGuiNet\Emotion.Plugins.ImGuiNet.csproj" />
+    <ProjectReference Include="..\Emotion.Tools\Emotion.Tools.csproj" />
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
   </ItemGroup>
 
