--- a/Emotion.Plugins.CSharpScripting/Emotion.Plugins.CSharpScripting.csproj
+++ b/Emotion.Plugins.CSharpScripting/Emotion.Plugins.CSharpScripting.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
