--- a/Emotion.Test/Emotion.Test.csproj
+++ b/Emotion.Test/Emotion.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Configurations>Debug;Release</Configurations>
     <ApplicationIcon></ApplicationIcon>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
