[Engine] Added the ability for platforms to disable thread naming.

--- a/Emotion.Web.ExecTest/Emotion.Web.ExecTest.csproj
+++ b/Emotion.Web.ExecTest/Emotion.Web.ExecTest.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Emotion.ExecTest\Emotion.ExecTest.csproj" />
     <ProjectReference Include="..\Emotion.Web\Emotion.Web.csproj" />
   </ItemGroup>
 
