[Web] Platform fixes
Thread blocking code is overwritten in web mode with either synchronous code or async code.
Setting a non-default loading screen will now wait for packed assets to load.
Fixed some key presses not being detected.

--- a/Emotion.Web/Emotion.Web.csproj
+++ b/Emotion.Web/Emotion.Web.csproj
@@ -34,4 +34,19 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\emotion.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\style.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
